# campusplaner-backend

./: Cargo.toml  build.rs
proto/: mensa_menu.proto
src/: main.rs
src/mensa/: error.rs  mensa_dtos.rs  mensaplan_grabber.rs  mod.rs
src/services/: mod.rs  service_provider.rs
src/services/mensa/: mensa_service.rs  mod.rs
