[package]
name = "campusplaner-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.12.1"
tokio = {version = "1" , features = ['full']}
prost = "0.13.1"
reqwest ="0.12.5"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6.0"

log = "0.4"
env_logger = "0.11.4"

[build-dependencies]
tonic-build = "0.12.1"